@@ -26,6 +26,7 @@ import org.slf4j.LoggerFactory;
 
 import java.time.OffsetDateTime;
 import java.util.List;
+import java.util.Objects;
 import java.util.UUID;
 
 import static io.kneo.broadcaster.repository.table.KneoBroadcasterNameResolver.PROMPT;
@@ -101,7 +102,7 @@ public class PromptRepository extends AsyncRepository {
     }
 
     public Uni<Prompt> findByMasterAndLanguage(UUID masterId, LanguageCode languageCode, boolean includeArchived) {
-        String sql = "SELECT * FROM " + entityData.getTableName() + 
+        String sql = "SELECT * FROM " + entityData.getTableName() +
                 " WHERE master_id = $1 AND language_code = $2";
 
         if (!includeArchived) {
@@ -124,8 +125,8 @@ public class PromptRepository extends AsyncRepository {
         return Uni.createFrom().deferred(() -> {
             try {
                 String sql = "INSERT INTO " + entityData.getTableName() +
-                        " (author, reg_date, last_mod_user, last_mod_date, enabled, prompt, language_code, is_master, locked, title, backup, podcast, draft_id, master_id) " +
-                        "VALUES ($1,$2,$3,$4,$5,$6,$7,$8,$9,$10,$11,$12,$13,$14) RETURNING id";
+                        " (author, reg_date, last_mod_user, last_mod_date, enabled, prompt, language_code, is_master, locked, title, backup, podcast, draft_id, master_id, version) " +
+                        "VALUES ($1,$2,$3,$4,$5,$6,$7,$8,$9,$10,$11,$12,$13,$14,$15) RETURNING id";
 
                 OffsetDateTime now = OffsetDateTime.now();
 
@@ -143,7 +144,8 @@ public class PromptRepository extends AsyncRepository {
                         .addJsonObject(JsonObject.of("backup", prompt.getBackup()))
                         .addBoolean(prompt.isPodcast())
                         .addUUID(prompt.getDraftId())
-                        .addUUID(prompt.getMasterId());
+                        .addUUID(prompt.getMasterId())
+                        .addDouble(prompt.getVersion());
 
                 return client.withTransaction(tx ->
                                 tx.preparedQuery(sql)
@@ -171,8 +173,8 @@ public class PromptRepository extends AsyncRepository {
                             }
 
                             String sql = "UPDATE " + entityData.getTableName() +
-                                    " SET enabled=$1, prompt=$2, language_code=$3, is_master=$4, locked=$5, title=$6, backup=$7, podcast=$8, draft_id=$9, master_id=$10, last_mod_user=$11, last_mod_date=$12 " +
-                                    "WHERE id=$13";
+                                    " SET enabled=$1, prompt=$2, language_code=$3, is_master=$4, locked=$5, title=$6, backup=$7, podcast=$8, draft_id=$9, master_id=$10, version=$11, last_mod_user=$12, last_mod_date=$13 " +
+                                    "WHERE id=$14";
 
                             OffsetDateTime now = OffsetDateTime.now();
 
@@ -187,6 +189,7 @@ public class PromptRepository extends AsyncRepository {
                                     .addBoolean(prompt.isPodcast())
                                     .addUUID(prompt.getDraftId())
                                     .addUUID(prompt.getMasterId())
+                                    .addDouble(prompt.getVersion())
                                     .addLong(user.getId())
                                     .addOffsetDateTime(now)
                                     .addUUID(id);
@@ -220,6 +223,7 @@ public class PromptRepository extends AsyncRepository {
         doc.setDraftId(row.getUUID("draft_id"));
         doc.setMasterId(row.getUUID("master_id"));
         doc.setArchived(row.getInteger("archived"));
+        doc.setVersion(row.getDouble("version"));
         return doc;
     }
 
@@ -294,18 +298,17 @@ public class PromptRepository extends AsyncRepository {
                     .execute(Tuple.of(sceneId))
                     .replaceWithVoid();
         }
-        
-        // Filter out null prompt IDs
+
         List<UUID> validPrompts = prompts.stream()
-                .filter(promptId -> promptId != null)
-                .collect(java.util.stream.Collectors.toList());
-        
+                .filter(Objects::nonNull)
+                .toList();
+
         if (validPrompts.isEmpty()) {
             return tx.preparedQuery(deleteSql)
                     .execute(Tuple.of(sceneId))
                     .replaceWithVoid();
         }
-        
+
         String insertSql = "INSERT INTO mixpla_script_scene_prompts (script_scene_id, prompt_id, rank) VALUES ($1, $2, $3)";
         return tx.preparedQuery(deleteSql)
                 .execute(Tuple.of(sceneId))
